# Bluetooth-RFID-reader

./: .gitignore  CMakeLists.txt  README.md  main.c  main.cpp
Configuration/: uart.h
scripts/: upload.sh
